[gd_scene load_steps=5 format=3 uid="uid://dqkcly2ad5fqy"]

[ext_resource type="Script" uid="uid://cfwhr8wq0lbj" path="res://src/ui_components/base/search_line_edit/search_line_edit.gd" id="1_cm80e"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="2_2kr7t"]

[sub_resource type="InputEventKey" id="InputEventKey_84wx2"]
device = -1
keycode = 47
unicode = 47

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_f1fas"]
button_index = 3
pressed = true

[node name="SearchLineEdit" type="HBoxContainer"]
anchors_preset = -1
anchor_right = 0.289583
anchor_bottom = 0.0240741
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cm80e")
metadata/_edit_use_anchors_ = true

[node name="LineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search"

[node name="Shortcut" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
shortcut_in_tooltip = false
script = ExtResource("2_2kr7t")
key_event = SubResource("InputEventKey_84wx2")
joypad_button_event = SubResource("InputEventJoypadButton_f1fas")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Shortcut" to="." method="_on_shortcut_button_pressed"]
